--- a/css/dataLogin.css
+++ b/css/dataLogin.css
@@ -1,17 +1,23 @@
 
+.dataLogin{
+    margin:0px 0px 0px 0px;
+    padding:0px 0px 0px 0px;
+}
+
 .loginContainer{
-    width: 500px;
-    height: 400px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    box-sizing: border-box;
-    background: rgba(0,0,0,0.8);
-    padding: 0 0 20px;
+  
+    box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
+    padding:0px 0px 0px 0px;
+    padding-top: 30px;
+    margin: 0px auto 0px;
     text-align: center;
-    font-family: cursive;
+    width: 50%;
     color: white;
+    background-color: rgba(3, 1, 1, 0.9);
+    font-family: cursive;
+    height: 300px;
+    width: 500px;
+  
 }
 
 
