--- a/css/dataRegister.css
+++ b/css/dataRegister.css
@@ -5,18 +5,20 @@
 }
 
 .signinContainer{
+
+    box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
+    padding:0 0 20px;
+    padding-top: 30px;
+    margin: 0px auto 0px;
+    text-align: center;
+    width: 50%;
+    color: white;
+    background-color: rgba(3, 1, 1, 0.9);
+    font-family: cursive;
     width: 850px;
     height: 500px;
-    position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-    box-sizing: border-box;
-    background: rgba(0,0,0,0.8);
-    padding: 0 0 20px;
-    text-align: center;
-    font-family: cursive;
-    color: white;
 }
 
 .input-box{
