--- a/css/setting.css
+++ b/css/setting.css
@@ -49,7 +49,7 @@
     background-color: rgba(3, 1, 1, 0.9);
     font-family: "Fredoka One";
     /* margin-top: 10%; */
-    height: 90%;
+    height: 97%;
 }
 .settingLabels{
     font-family: "Nunito";
@@ -180,7 +180,12 @@ ul {padding: 0px; margin: 0;}
 
 }
 
-
+.after-press-span{
+	font-size: 10px;
+	size:10px;
+	color: black;
+	font-family: cursive;
+}
 
 
 
