--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,12 @@
-
 .menu
   {
     overflow: auto;
     background-color: black;
     position: fixed;
-    top: 0;
+    top: 130px;
     width: 100%;
     /*padding: 7px;*/
     z-index: 999;
-    border-bottom: white solid 2px;
   }
 
   .menu a{
@@ -31,9 +29,10 @@
   }
 
   .main {
-    padding: 16px;
-    margin-top: 30px;
-    height: 1500px; /* Used in this example to enable scrolling */
+    display: block;
+    margin-top: 100px;
+    margin: 0;
+    height: 3000px; /* Used in this example to enable scrolling */
   }
 
   @media screen and (max-width: 500px) {
@@ -63,7 +62,31 @@ h1{
     font-family: cursive;
 }
 
+.header {
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+  margin-bottom: 10;
+  /*******/
+  overflow: auto;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 8;
+  /*padding: 7px;*/
+  /* z-index: 999; */
+}
 
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
 
 
 
