--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap');
+
 .board{
     border: black solid 3px;
     border-radius: 10px;
