--- a/css/style.css
+++ b/css/style.css
@@ -78,15 +78,18 @@ h1{
   /* z-index: 999; */
 }
 
-.footer {
-  position: fixed;
+/* .footer {
+  position: absolute;
+  right: 0;
   left: 0;
   bottom: 0;
   width: 100%;
   background-color: red;
-  color: white;
+  color: black;
+  height: 20px;
+  padding: 1rem;
   text-align: center;
-}
+} */
 
 
 
