--- a/css/app.css
+++ b/css/app.css
@@ -3,7 +3,25 @@
 .board{
     border: black solid 3px;
     border-radius: 10px;
+    background-color: black;
 }
+
+.gameImportantDetails{
+    font-family: cursive;
+    font-size: 24px;
+    text-align: center;
+}
+
+.gameImportantDetails input{
+    border-radius: 20px;
+    padding: 10px;
+    margin: 10px 0;
+    width: 80%;
+    border: 1px solid #999;
+    outline: none;
+    font-size: 14px;
+}
+
 .gameSetting{
     font-size: 20px;
     text-align: center;
@@ -11,8 +29,22 @@
     border: #FADAD7 solid 3px;
     border-radius: 10px;
     padding: 10px 20px 10px 10px;
-
 }
+
+.settingContainer{
+    box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
+    padding: 0px 0px 0px 0px;
+    margin: 30px auto 0px;
+    text-align: center;
+    width: 50%;
+    color: white;
+    background-color: black;
+    /* background-color: rgba(3, 1, 1, 0.9); */
+    font-family: "Fredoka One";
+    /* margin-top: 10%; */
+    /* height: 70%; */
+}
+
 .arrows{
     border: black solid 3px;
     /* margin-top: 10px; */
@@ -25,14 +57,12 @@
     padding-right: 10px;
     color: black;
     font-size: 18px;
-    
 }
 
 .setting-text{
     font-family: cursive;
     font-size: 20px;
     color: black;
-
 }
 
 .otherSetting{
@@ -43,14 +73,15 @@
 .newGame-bth{
     color: #ffffff;
     background-color: cornflowerblue;
-    width: 20%;
-    padding: 10px;
-    border-radius: 20px;
-    font-size: 18px;
-    margin: 10px 0;
+    width: 100%;
+    padding: 5px;
+    margin-top: -12px;
+    border-radius: 150px;
+    font-size: 26px;
+    margin: 16px 5px;
     border: none;
     outline: none;
     cursor: pointer;
     font-family: cursive;
-    height: 40px;
+    height: 140px;
   }
