--- a/css/dataLogin.css
+++ b/css/dataLogin.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Bungee+Shade&display=swap');
 
 .dataLogin{
     margin:0px 0px 0px 0px;
     padding:0px 0px 0px 0px;
+}
+
+.loginHeader{
+    font-family: "Bungee Shade";
+    font-size: 65px;
 }
 
 .loginContainer{
@@ -20,15 +26,37 @@
   
 }
 
+#login_username, #login_password{
+    border-radius: 20px;
+    padding: 10px;
+    margin: 10px 0;
+    width: 80%;
+    border: 1px solid #999;
+    outline: none;
+    font-size: 14px;
+}
 
+.loginContainer{
+    box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
+    padding:0 0 20px;
+    padding-top: 10px;
+    margin: 0px auto 0px;
+    text-align: center;
+    width: 45%;
+    color: white;
+    background-color: rgba(3, 1, 1, 0.5);
+    font-family: cursive;
+    width: 600px;
+    height: 400px;
+}
 
 .loginB{
     color: #ffffff;
     background-color: cornflowerblue;
-    width: 60%;
+    width: 50%;
     padding: 10px 10px;
     border-radius: 20px;
-    font-size: 15px;
+    font-size: 20px;
     margin: 10px 0;
     border: none;
     outline: none;
@@ -36,7 +64,10 @@
     font-family: cursive;
 }
 
-tr{
+
+.loginTable tr{
     text-align: left;
-}
+    font-size: 24px;
+  }
+
 
