--- a/css/setting.css
+++ b/css/setting.css
@@ -51,7 +51,7 @@
     background-color: rgba(3, 1, 1, 0.9);
     font-family: "Fredoka One";
     /* margin-top: 10%; */
-    height: 100%;
+    height: 900px;
 }
 .settingLabels{
     font-family: "Nunito";
@@ -262,7 +262,7 @@ li {
 	-moz-box-shadow: 5px 5px 10px rgba(0,0,0,.3);
 	box-shadow: 5px 5px 10px rgba(0,0,0,.3);
 	z-index: 2;
-	border-size: 10px;
+	/* border-size: 10px; */
 	-webkit-transform: rotate(-360deg);
 	-moz-transform: rotate(-360deg);
 	-o-transform: rotate(-360deg);
