--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,59 @@
+
+/*******menu*******/
+.menuContext{
+ overflow: auto;
+ height: 70px;
+ width: 100%;
+}
+
 .menu
   {
+    position: relative;
     overflow: auto;
+    display: flex;
+    justify-content: center;
     background-color: black;
-    position: fixed;
-    top: 130px;
+    /* position: absolute !important; */
+    /* top: 0; */
     width: 100%;
-    /*padding: 7px;*/
-    z-index: 999;
+    /* z-index: 999; */
+    margin-top: 70px;
+    margin: auto;
+    height: 70px;
+    border-spacing: 40px 0px;
   }
 
   .menu a{
+  
     float: left;
-    display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 8px 60px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 30px;
     font-family: cursive;
     list-style: solid;
   }
 
   .menu a:hover
   {
-    background: #ddd;
-    color: black;
-    font-size: 22px;
+    background-image: url('../images/menuBg.JPG') ;
+    background-size: cover;
+    font-size: 34px;
+    font: outline;
+    color: white;
+    height: 60px;
   }
 
-  .main {
-    display: block;
-    margin-top: 100px;
-    margin: 0;
-    height: 3000px; /* Used in this example to enable scrolling */
+  .menu > img {
+    display: block; 
+    -webkit-transition: -webkit-transform .8s ease-in-out;
+    transition: transform .8s ease-in-out;
+  }
+  
+  .menu:hover > img {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 
   @media screen and (max-width: 500px) {
@@ -49,6 +70,15 @@
 	.prev, .next,.text {font-size: 11px}
 }
 
+/***********************************************/
+
+  .main {
+    display: block;
+    margin-top: 100px;
+    margin: 0;
+    height: 250px; /* Used in this example to enable scrolling */
+  }
+
 .mainContainer{
   padding: 0px 0px 0px 0px ;
 }
@@ -57,26 +87,50 @@ section{
   height: 60%;
 }
 
-
 h1{
     font-family: cursive;
 }
 
-.header {
+/* .header {
   text-align: center;
   background: #1abc9c;
   color: white;
   font-size: 30px;
   margin-bottom: 10;
-  /*******/
+ 
   overflow: auto;
   position: fixed;
   top: 0px;
   width: 100%;
   height: 8;
-  /*padding: 7px;*/
-  /* z-index: 999; */
+  padding: 7px;
+  z-index: 999;
+} */
+
+.page-header { 
+  /* background: #000000 url(../images/logo2.JPG) 40% 100% no-repeat; */
+  /* overflow:hidden;  */
+  width:100%; 
+  height:300px; 
+  text-align:center; 
+  margin:0; 
+  /* position: relative; */
+  /* background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+   */
 }
+
+.logo-crop{ 
+  margin:auto 0; 
+  max-width:2800px; 
+  width:100%; 
+  height:300px; 
+  text-align:center; 
+  margin:0; 
+  position:relative;
+}
+
 
 /* .footer {
   position: fixed;
@@ -90,5 +144,4 @@ h1{
   text-align: center;
 } */
  
-
 
