--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@
  width: 100%;
 }
 
+
+.menuContext::-webkit-scrollbar {
+  display: none;
+}
+
 .menu
   {
     position: relative;
@@ -114,11 +119,15 @@ h1{
   z-index: 999;
 } */
 
+header{
+  width:100%; 
+  height:300px;
+
+}
 .page-header { 
   /* background: #000000 url(../images/logo2.JPG) 40% 100% no-repeat; */
   /* overflow:hidden;  */
-  width:100%; 
-  height:300px; 
+
   text-align:center; 
   margin:0; 
   /* position: relative; */
