--- a/css/datawelcome.css
+++ b/css/datawelcome.css
@@ -30,6 +30,11 @@
     margin: 8% auto 0;
     text-align: center;
     font-family: cursive;
+
+
+    border: 2px solid;
+    border-image-source: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);
+    border-image-slice: 1;
   }
   
   hr{
