--- a/style/app.css
+++ b/style/app.css
@@ -9,7 +9,7 @@
 
 .gameImportantDetails{
     font-family: cursive;
-    font-size: 15px;
+    font-size: 20px;
     text-align: center;
 }
 
@@ -102,9 +102,11 @@
     display:flex;
     align-items:center;
     justify-content:center;
-    font-size: 20px;
+    font-size: 28px;
+    text-shadow: 3px 3px black;
     /* color: black; */
     color: white;
+    margin-top: 0;
     /* text-transform:uppercase; */
     text-align: center;
     /* font-size:3vw; */
@@ -116,7 +118,8 @@
     height:calc(4vw + 12px);
     /* background-color:#191919; */
     display:flex;
-    font-size: 20px;
+    font-size: 28px;
+    text-shadow: 3px 3px black;
     align-items:center;
     justify-content:center;
   }
